--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hello World" />
+    <meta name="description" content="BoofBuddies" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <base href="/" />
-    <title>Hello World</title>
+    <title>ReactTemplate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
